--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,44 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Other files and folders
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+AngularCRUDDemo/node_modules
+AngularCRUDDemo/.angular/
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
 .settings/
+*.sublime-workspace
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+.gitignore123
+
+# System files
+.DS_Store
+Thumbs.db
